<resources>
    <string name="app_name">Ecom</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sort_AZ">Sort by A-Z</string>
    <string name="action_sort_ZA">Sort by Z-A</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">All Categories</string>
    <string name="menu_items">Items</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_banner">Banner</string>
    <string name="menu_banners">Banners</string>
    <string name="menu_products">Products</string>
    <string name="action_search_cat">Search Category</string>
    <string name="str_incorrect">incorrect</string>
    <string name="action_share">Share</string>
    <string name="INR_symbol">₹</string>
    <string name="action_search">Search</string>
    <string name="str_search_by_anything">Search by anything</string>
    <string name="action_add">Add</string>
    <string name="action_sync">Sync</string>
    <string name="str_unable_to_resolve_host">Unable to resolve host</string>
    <string name="str_no_internet">No Internet Connection</string>
    <string name="action_add_new_cat">Add New Category</string>
    <string name="menu_logout">Logout</string>
    <string name="action_cart">Cart</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_change_pwd">Change Password</string>
    <string name="menu_manage_address">Manage Address</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_faq">FAQs</string>
    <string name="menu_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="action_cat_list">Category List</string>

</resources>