<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories_admin"
            android:icon="@drawable/ic_sq_boxes"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_noti"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>